# pr-review-assistant

./: .gitignore  .pre-commit-config.yaml  PRD.md  README.md  __init__.py  main.py  pyproject.toml
.cursor/: README.md
.cursor/rules/: 00-architecture.mdc  10-coding-conventions.mdc  20-agent-contracts.mdc  25-data-models.mdc  30-tool-specs.mdc  35-workflow-orchestration.mdc  40-prompt-style.mdc  45-testing-quality.mdc  50-io-and-state.mdc  55-deployment-operations.mdc  60-quality-gates.mdc  70-ci-and-repo-policy.mdc  80-security-and-privacy.mdc  90-observability-and-performance.mdc  95-project-structure.mdc
.github/workflows/: ci.yaml  request-pr-review.yaml
agents/: base.py  planner.py
agents/change_summarizer/: __init__.py  summarizer.py
agents/reviewer/: reviewer.py
docs/: mvp_orchestrator_design.md
examples/: secret_example.py
examples/migrations/: 0001_drop_users.sql
tests/: test_diff_summarizer.py  test_github_poster.py  test_llm_tool.py  test_reviewer.py  test_schema_analyzer.py  test_smoke.py
tools/: __init__.py  base.py  rules.py  scm.py
tools/code_analysis/: __init__.py  python_ast.py
tools/comparison/: __init__.py  code_doc_matcher.py
tools/git/: __init__.py  git_changes.py  provider_github.py
tools/llm/: __init__.py  base.py  prompts.py  providers.py  tool.py
tools/schema_analysis/: __init__.py  schema_analyzer.py
